# ghostwire

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: capture_demo.py  crypto_log.py  dataflow_follow.py  deob_strings.py  deob_vm.py  heap_diff.py  heap_search.py  live_patch.py  multitarget_demo.py  obfuscated_strings.py  oracle_demo.py  origin_trace.py  selftest.py
ghostwire/: __init__.py  __main__.py  api.py  browser.py  cdp.py  crypto.py  dataflow.py  deob.py  engine.py  heap.py  mcp_server.py  objects.py  oracle.py  origin.py  tracer.py
ghostwire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ghostwire/probes/: __init__.py  network.py  scripts.py
skills/verify-reimplementation/: SKILL.md
