[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostwire"
version = "0.1.0"
description = "Stealth runtime instrumentation for web reverse engineering, over the Chrome DevTools Protocol."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
# The core (transport, engine, tracer, oracle, probes, CLI) has no third-party dependencies:
# CDP runs over an OS pipe, so there is nothing to install to clone-and-run. Only the MCP
# server needs a package, and it is an optional extra.
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
ghostwire-mcp = "ghostwire.mcp_server:main"

[tool.setuptools.packages.find]
include = ["ghostwire*"]
